adding comments, header and nav and explanations about it

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Web 2 Test File</title>
 </head>
 <body>
-    
+    <!-- this is an HTML comment -->
+     <header>
+        <!-- the header element should be reserved for title information -->
+         <h1>The main title of your site</h1>
+         <nav>
+            <!-- the navigation tag defines a navigation area of your site: home, about, contact, etc -->
+             
+         </nav>
+     </header>
 </body>
 </html>
