add main, h3 and paragraph

--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
          <h1>The main title of your site</h1>
          <nav>
             <!-- the navigation tag defines a navigation area of your site: home, about, contact, etc -->
-             
+
          </nav>
      </header>
+     <main>
+        <!-- main defines the main content of your site -->
+         <section>
+            <h3>Title of content</h3>
+            <p>some content</p>
+         </section>
+     </main>
 </body>
 </html>
