add ul and li to create a navigation from index.html to page2.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
     <title>Web 2 Test File</title>
 </head>
 <body>
@@ -10,14 +11,21 @@
      <header>
         <!-- the header element should be reserved for title information -->
          <h1>The main title of your site</h1>
+         <!-- the navigation tag defines a navigation area of your site: home, about, contact, etc -->
          <nav>
-            <!-- the navigation tag defines a navigation area of your site: home, about, contact, etc -->
-
+            <!-- unordered list -->
+             <ul>
+                <!-- list items -->
+                 <li><a href="page2.html">Go to page 2</a></li>
+                 <li></li>
+                 <li></li>
+             </ul>
          </nav>
      </header>
      <main>
         <!-- main defines the main content of your site -->
          <section>
+            <img src="images/kitten.jfif" alt="A yellow kitten sitting in a couch"> <!-- alt is for accessability to describe the image -->
             <h3>Title of content</h3>
             <p>some content</p>
          </section>
