add another link to my li

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
              <ul>
                 <!-- list items -->
                  <li><a href="page2.html">Go to page 2</a></li>
-                 <li></li>
+                 <!-- target="_blank" is for the link open in a new tab when you click on it -->
+                 <li><a href="https://algonquincollege.com" target="_blank">Algonquin College</a></li>
                  <li></li>
              </ul>
          </nav>
