empty link using # and a new li for home page

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
             <!-- unordered list -->
              <ul>
                 <!-- list items -->
+                 <li><a id="current" href="index.html">Home</a></li>
                  <li><a href="page2.html">Go to page 2</a></li>
                  <!-- target="_blank" is for the link open in a new tab when you click on it -->
                  <li><a href="https://algonquincollege.com" target="_blank">Algonquin College</a></li>
-                 <li></li>
+                 <!-- an a tag with # just refreshes the page -->
+                 <li><a href="#">empty link</a></li>
              </ul>
          </nav>
      </header>
